[update]: header에 link 추가

--- a/frontend/army_mentoring/src/components/Header/Header.scss
+++ b/frontend/army_mentoring/src/components/Header/Header.scss
@@ -3,3 +3,11 @@ $base-color:aqua;
     color:$base-color;
     text-decoration: $base-color;
 }
+ul {
+    
+  }
+li{
+    
+    display: inline-block;   
+    margin-right: 5px;
+}
