--- a/frontend/army_mentoring/src/components/Header/Header.scss
+++ b/frontend/army_mentoring/src/components/Header/Header.scss
@@ -1,13 +1,36 @@
 $base-color:aqua;
-.header2 {
-    color:$base-color;
-    text-decoration: $base-color;
-}
-ul {
-    
+.headerDiv
+{
+  
+  top: 0;
+  background-color: white;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 70px;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
+  margin-bottom: 10px;
+  .logoImage{
+   
+    height: 50px;
   }
-li{
+
+  ul {
     
-    display: inline-block;   
-    margin-right: 5px;
+    display: flex;
+    margin-bottom: 2rem;   
+    
+    }
+  li{
+    list-style-type: none;
+    margin-right: 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    color: black;
+    :visited{
+      color:black;
+    }
+  }
 }
