[update] : #003 feature 개발 <description> #003 이슈의 페이지 서브 메뉴바의 화면 고정 기능 추가

--- a/frontend/army_mentoring/src/components/Routes/Mentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring.scss
@@ -22,6 +22,7 @@ $gray3 :#D4D4D4;
         justify-content: flex-start;
         border-bottom: 1px solid $gray3;
         margin:0px;
+        background-color: white;
     }
     li{
         display:inline-block;
@@ -33,4 +34,14 @@ $gray3 :#D4D4D4;
         color: black;
         font-weight: bold;
     }
+}
+
+.fixedNav{
+    position: fixed;
+    top : 0px;
+    width: 100%;
+}
+
+.staticNav{
+    position: static;
 }
