[feature, update] : #008 mentoring 관련 페이지 기본요소/스타일 작성 및 페이지간 연결  mentoring_introduction, make_mentoring, mentoring_specific_mento/mentee 페이지 기본요소/스타일 작성 및 페이지간 연결링크 생성

--- a/frontend/army_mentoring/src/components/Routes/Mentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring.scss
@@ -5,11 +5,11 @@ $gray3 :#D4D4D4;
     flex-direction: column;
     height:600px;
     width:100%;
-    background-color: gray;
+    background-color: white;
     align-items:center;
     justify-content: center;
 }
 
-.section:nth-child(2n){
-    background-color: white;
+.section:nth-child(2n-1){
+    background-color: $gray3;
 }
