--- a/frontend/army_mentoring/src/components/Routes/Mentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring.scss
@@ -1,15 +1,30 @@
 $gray3 :#D4D4D4;
 
-.section{
-    display:flex;
-    flex-direction: column;
-    height:600px;
-    width:100%;
-    background-color: white;
-    align-items:center;
-    justify-content: center;
-}
-
-.section:nth-child(2n-1){
-    background-color: $gray3;
+#sgstmentoring{
+    & div{
+        width:90%;
+        height:90%;
+        margin:0px auto;
+        & h2{
+            text-align: left;
+        }
+        & p{
+            width:100%;
+            height:80%;
+            display:flex;
+            flex-direction: row;
+            flex-wrap:wrap;
+            justify-content: center;
+            align-content: center;
+            a{
+                display:block;
+                width:300px;
+                height:100px;
+                margin:15px;
+                border:1px solid black;
+                text-decoration: none;
+                color:black;
+            }
+        }
+    }
 }
