--- a/frontend/army_mentoring/src/components/Routes/Mentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring.scss
@@ -7,6 +7,7 @@ $gray3 :#D4D4D4;
         margin:0px auto;
         & h2{
             text-align: left;
+            font-weight:bold;
         }
         & p{
             width:100%;
@@ -21,6 +22,7 @@ $gray3 :#D4D4D4;
                     font-size:15px;
                 }
                 display:block;
+                background-color:white;
                 width:300px;
                 height:120px;
                 margin:15px;
@@ -32,4 +34,66 @@ $gray3 :#D4D4D4;
             }
         }
     }
+}
+
+#sgstmentor{
+    & div{
+        width:90%;
+        height:90%;
+        margin:0px auto;
+        & h2{
+            text-align: left;
+            font-weight:bold;
+        }
+        & p{
+            width:100%;
+            height:80%;
+            display:flex;
+            flex-direction: row;
+            flex-wrap:wrap;
+            justify-content: center;
+            align-content: center;
+            a{
+                & p{
+                    font-size:15px;
+                }
+                display:block;
+                background-color:white;
+                width:300px;
+                height:120px;
+                margin:15px;
+                border:3px solid green;
+                box-shadow: 10px 5px 5px black;
+                text-decoration: none;
+                color:black;
+                border-radius: 20px 20px 20px 0px;
+            }
+        }
+    }
+}
+
+#srchmentoring{
+    & div{
+        width:90%;
+        height:90%;
+        margin:0px auto;
+        & h2{
+            text-align: left;
+            font-weight:bold;
+        }
+    }
+}
+
+#button{
+    display:inline-block;
+    width:300px;
+    height:100px;
+    border:3px solid green;
+    background-color:white;
+    box-shadow: 10px 5px 5px $gray3;
+    text-decoration: none;
+    color:black;
+    line-height: 100px;
+    border-radius: 20px 20px 20px 0px;
+    margin:10px 0px;
 }
