--- a/frontend/army_mentoring/src/components/Routes/Mentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring.scss
@@ -81,6 +81,27 @@ $gray3 :#D4D4D4;
             text-align: left;
             font-weight:bold;
         }
+        & ul{
+            margin:0px;
+            padding:0px;
+            list-style:none;
+            display:flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            li{
+                display:inline-block;
+                width:300px;
+                height:50px;
+                line-height: 50px;
+                margin: 0px 10px 0px 0px;
+                border:1px solid green;
+            }
+        }
+        & div{
+            height:50px;
+            text-align: left;
+            margin:0px;
+        }
     }
 }
 
