--- a/frontend/army_mentoring/src/components/Routes/Mentorintroduction.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentorintroduction.scss
@@ -14,95 +14,176 @@ $gray3 : #D4D4D4;
   background-color: $secondary;
   align-items: center;
   justify-content: center;
+  
+  .OneLineIntro{
+    font-size: 50px;
+    color: white;
+    // margin-top: 200px;
+    // margin-bottom: 117px;
+    flex-direction: column;
+  
+    // padding: 0px 0px 0px 200px;
+    // position: absolute;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    text-align: center;
+    width: 1132px;
+    height: 352px;
+  }
+  
+  .MentorProfile{
+    display: flex;
+    // float: right;
+    // flex-wrap: wrap;
+    // padding-left: 200px;
+  
+    flex-direction: row;
+    width: 1500px;
+    justify-content: flex-start;
+  };
+  
+  .updown{
+    border: 1px solid white;
+    background-color: white;
+    width: 0.1px; 
+    height: 260px;
+    margin-left: 50px;
+  }
+  
+  .blank{
+    width:100px;
+  }
+  
+  .mentor-pic{
+    display: flex;
+    flex-direction: column;
+    // align-items: center;
+    // padding: 0px 0px 0px 200px;
+    // padding-left: 200px;
+    border: 1px solid;
+    border-radius: 15px;
+    width: 150px;
+    height: 150px;
+  };
+  
+  .Summary{
+    display: flex;
+    float: left;
+    flex-direction: column;
+    // padding-left: 100px;
+    font-size: 36px;
+    // position: relative;
+    // width: 250px;
+    // height: 168px;
+    align-items: flex-start;
+  
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 42px;
+    color: white;
+  };
+  
+  .GoMentorProf{
+    // float: right;
+  
+    // width: 334px;
+    // height: 105px;
+    
+    font-size:30px;
+    color: white;
+    background-color: $gray3;
+    // padding:10px 10px;
+    // padding: 0;
+    // float: bottom;
+    margin-top: 200px;
+    text-align: center;
+    // margin-right: 70px;
+    // margin-bottom: 70px; 
+    border-radius:10px 10px 10px 0;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: center;
+    align-items: center;
+    justify-content: center;
+    padding: 9px 10px;
+  
+    // position: absolute;
+    width: 334px;
+    height: 105px;
+    // left: 1188px;
+    // top: 448px;
+  }
+  
 };
 
-.OneLineIntro{
-  font-size: 50px;
-  color: white;
-  margin-top: 200px;
-  margin-bottom: 117px; 
-  flex-direction: column;
 
-  // padding: 0px 0px 0px 200px;
-  // position: absolute;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  text-align: center;
-  width: 1132px;
-  height: 352px;
+.Empty{
+  height:518px;
+  width: 1500px;
+  background-color: white;
 }
 
-.MentorProfile{
-  display: flex;
-  // float: right;
-  // flex-wrap: wrap;
-  padding-left: 200px;
-
-  flex-direction: row;
+.Project{
+  display:flex;
+  flex-direction: column;
+  // position: absolute;
+  left: 50%;
+  right: 50%;
+  height:711px;
   width: 1500px;
-  justify-content: flex-start;
-};
-
-.mentor-pic{
-  display: flex;
-  // float: right;
-  flex-direction: column;
-  // align-items: center;
-  // padding: 0px 0px 0px 200px;
-  // padding-left: 200px;
-  border: 1px solid;
-  border-radius: 15px;
-  width: 150px;
-  height: 150px;
-};
-
-.Summary{
-  display: flex;
-  float: left;
-  flex-direction: column;
-  padding-left: 100px;
-  font-size: 36px;
-  // position: relative;
-  // width: 250px;
-  // height: 168px;
-
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 42px;
-  color: white;
-};
-
-.GoMentorProf{
-  // float: right;
-
-  // width: 334px;
-  // height: 105px;
-  
-  font-size:30px;
-  color: white;
-  background-color: $gray3;
-  // padding:10px 10px;
-  padding: 0;
-  text-align: center;
-  // margin-right: 70px;
-  // margin-bottom: 70px; 
-  border-radius:10px 10px 10px 0;
-  // display: flex;
-  // flex-direction: row;
-  // justify-content: center;
+  margin: 0 auto;
+  background-color: $secondary;
   align-items: center;
   justify-content: center;
-  padding: 9px 10px;
+  
+  .CardList{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .Card{
+      display: flex;
+      flex-direction: column;
+      width: 456px;
+      height: 527px;
+      background-color: white;
+    
+      border-radius: 15px;
+    
+      display: inline-block;
+    
+      margin-top: 30px;
+    
+      margin-left: 30px;
+    
+      margin-bottom: 30px;
+    
+      position: relative;
+    
+      // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      
+        overflow: hidden;
+        b{
+          font-size: 28px;
+          text-align: center;
+          justify-content: center;
+        }
+        img{
+          padding: 30px 30px 10px 30px ;
+        }
+        .Cardtext{
+          padding: 15px;
+          font-size: 28px;
 
-  // position: absolute;
-  width: 334px;
-  height: 105px;
-  // left: 1188px;
-  // top: 548px;
-}
+        };
+
+    };
+  };
+};
+
+
 
 .Certificate{
     display:flex;
@@ -113,30 +194,72 @@ $gray3 : #D4D4D4;
     height:518px;
     width: 1500px;
     margin: 0 auto;
-    background-color: aqua;
+    background-color: white;
     align-items:center;
     justify-content: center;
+
+    .CertList{
+      display:flex;
+      flex-direction: column;
+      position: static;
+      align-items: flex-start;
+      justify-content: center;
+      width: 450px;
+      margin: 0 auto;
+      height: 300px;
+      background-color: $gray3;
+      border-radius: 15px;
+      line-height: 350%;
+    
+      font-family: Roboto;
+      b{
+        font-size: 28px;
+        margin-left: 25px;       
+
+      }
+      li{
+        font-size: 36px;
+        margin-left: 25px;       
+      };
+    }
 };
 
-.CertList{
+.MentoringInfo{
   display:flex;
-  padding: 0;
   flex-direction: column;
-  position: static;
-  align-items: flex-start;
-  justify-content: center;
-  width: 200px;
+  // position: absolute;
+  left: 50%;
+  right: 50%;
+  height:956px;
+  width: 1500px;
   margin: 0 auto;
-  width: 735px;
-  background-color: $gray3;
-  border-radius: 15px;
+  background-color: $secondary;
+  align-items:center;
+  justify-content: center;
 
-  font-family: Roboto;
-  b{
-    font-size: 28px;
-  }
-  li{
-    font-size: 36px;
+  .Mentoring{
+    width: 850px;
+    height: 350px;
+    background-color: white;
+    padding: 10px;
+    // border: solid 1px;
+    margin: 35px;
+    border-radius: 15px;
 
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+
+    .MentoringTitle{
+      font-size: 28px;
+      text-align: left;
+      padding-left: 50px;
+    };
+    .MentoringText{
+      font-size: 36px;
+      text-align: left;
+      padding: 5px 20px 10px 50px;
+    };
   };
+ 
 }
