[feature, update] : close #023, home/header 디자인 css는 나중에 하는 걸로 결정되어서 중단!

--- a/frontend/army_mentoring/src/components/Routes/Mentoring.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring.scss
@@ -1,8 +1,8 @@
-$gray3 :#D4D4D4;
+@import './preset.scss';
 
 #sgstmentoring{
     & div{
-        width:90%;
+        width:1800px;
         height:90%;
         margin:0px auto;
         & h2{
@@ -38,7 +38,7 @@ $gray3 :#D4D4D4;
 
 #sgstmentor{
     & div{
-        width:90%;
+        width:1800px;
         height:90%;
         margin:0px auto;
         & h2{
