--- a/frontend/army_mentoring/src/components/Routes/Home.scss
+++ b/frontend/army_mentoring/src/components/Routes/Home.scss
@@ -1,69 +1,94 @@
-$background-color:white;
+@import './preset.scss';
 
 
-.home{
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 0px;
-height: 656px;
-left: 0px;
-top: 216px;
-/* gray4 */
-background: $background-color;
-}
-
-.Q{
+.home_section{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px;
+    height: 700px;
+    background: $white;
 }
-.A{
-    display:none;
 
-&.hide{
+.home_section:nth-child(2n){
+    background: $gray4;
+}
+
+.section_title{
+    font-weight: bold;
+    font-size: 50px;
+}
+
+.button{
     display: block;
+    background-color: $secondary;
+    width:300px;
+    height:80px;
+    line-height: 80px;
+    text-align: center;
+    margin:50px;
+    border-radius: 20px 20px 20px 0px;
+    text-decoration: none;
+    color: $white;
+    font-weight: bold;
+    font-size: 20px;
+    &:hover{
+        color:$gray3;
+    }
 }
-}
-.service{
 
+
+.service{
     .section_service{
         display: flex;
         align-items: center;
         .service_text{
             flex-direction: column;
             justify-content: center;          
+            h3{
+                font-size:20px;
+            }
         }
+    }
+    img{
+        width:400px;
     }
 }
 
 .mentoring{
     .section_mentoring{
         display: flex;
-        flex-direction: row;
-        
         div{
-            height: 100px;
-            width: 100px;
-            flex-direction: row;
+            height: 200px;
+            width: 200px;
+            line-height: 200px;
         }
     }
 }
 
 .howtodo{
     .section_howtodo{
-        display: flex;
+        display:flex;
+        flex: row;
+        div{
+            width:300px;
+            height:300px;
+            margin:10px;
+            background-color: $secondary;
+            border-radius: 20px 20px 20px 0px;
+        }
     }
 }
+
 .review{
     .carousel-inner{
-        height: 500px;
         width: 300px;
+        height: 500px;
     }
     .carousel-item{
-        
-        height: 300px;
         width: 300px;
+        height: 300px;
     }
     .carousel-caption {
         color: black;
@@ -73,3 +98,40 @@ background: $background-color;
     }
     
 }
+
+.QnAbutton{
+    display: block;
+    background-color: $secondary;
+    width:20px;
+    height:20px;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 5px 5px 5px 0px;
+    margin: 0px 10px;
+    color: $black;
+    font-weight: bold;
+    font-size: 10px;
+    &:hover{
+        color:$gray3;
+    }
+}
+
+.QnA{
+    display:flex;
+    flex-direction: column;
+    width:1000px;
+    margin:10px 0px;
+}
+
+.Q{
+    display: flex;
+    flex-direction: row;
+}
+.A{
+    display:none;
+    &.hide{
+        display: flex;
+        flex-direction: row;
+    }
+}
+
