--- a/frontend/army_mentoring/src/components/Routes/Login/Login.scss
+++ b/frontend/army_mentoring/src/components/Routes/Login/Login.scss
@@ -13,6 +13,23 @@ form{
     display:flex;
     flex-direction: column;
     justify-items: flex-start;
-    width:300px;
+    width:500px;
     margin:0px auto;
+}
+
+.row{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.text{
+    width:80%;
+}
+.button{
+    width:50%;
+}
+.ar{
+    display:block;
+    width:50%;
 }
