--- a/frontend/army_mentoring/src/components/Routes/Login/Profile.scss
+++ b/frontend/army_mentoring/src/components/Routes/Login/Profile.scss
@@ -1,5 +1,4 @@
-$secondary :#6BA259;
-$gray3 : #D4D4D4;
+@import '../preset.scss';
 
 .profile{
   display:flex;
@@ -9,118 +8,99 @@ $gray3 : #D4D4D4;
   margin: 0 auto;
   align-items: center;
   justify-content: center;
-}
-
-.Intro{
-  display:flex;
-  flex-direction: column;
-  // position: absolute;
-  left: 50%;
-  right: 50%;
-  height:416px;
-  width: 1350px;
-  margin: 0 auto;
-  background-color: $secondary;
-  align-items: center;
-  justify-content: center;
-  border-radius: 0px 200px 200px 200px;
-
-  .MyImg{
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    // padding: 0px 0px 0px 200px;
-    // padding-left: 200px;
-    border: 1px solid;
-    border-radius: 15px;
-    width: 150px;
-    height: 150px;
-  }
-
-  .GoProtfolio{
-    // float: right;
   
-    // width: 334px;
-    // height: 105px;
-    
-    font-size:30px;
-    color: white;
-    background-color: $gray3;
-    // padding:10px 10px;
-    // padding: 0;
-    // float: bottom;
-    // margin-top: 200px;
-    text-align: center;
-    // margin-right: 70px;
-    // margin-bottom: 70px; 
-    border-radius:10px 10px 10px 0;
-    // display: flex;
-    // flex-direction: row;
-    // justify-content: center;
+  .intro{
+    display:flex;
+    flex-direction: column;
+    left: 50%;
+    right: 50%;
+    height:416px;
+    width: 1350px;
+    margin: 0 auto;
+    background-color: $secondary;
     align-items: center;
     justify-content: center;
-    padding: 9px 10px;
-  
+    border-radius: 0px 200px 200px 200px;
+
+    .my-img{
+      display: flex;
+      flex-direction: column;
+      border: 1px solid;
+      border-radius: 15px;
+      width: 150px;
+      height: 150px;
+    }
+
+    .go-portfolio{
+      font-size:30px;
+      color: white;
+      background-color: $gray2;
+      border-radius:10px 10px 10px 0;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0px;
+      margin: 0px;
+      width: 334px;
+      height: 105px;
+      text-decoration: none;
+      color: $white;
+    }
+  }
+
+  .DM{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: $secondary;
+    text-decoration: none;
+    font-size:20px;
+    color: white;
+    width: 276px;
+    height: 78px;
+    margin: 34px;
+    padding: 25px, 50px, 25px, 50px;
+    border-radius: 10px 10px 10px 0px;
+  }
+
+  .mentor_mentorings{
+    display: flex;
+    flex-direction: column;
     // position: absolute;
-    width: 334px;
-    height: 105px;
-    // left: 1188px;
-    // top: 448px;
-  };
-};
-
-.DM{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: $secondary;
-  font-size:20px;
-  color: white;
-  width: 276px;
-  height: 78px;
-  margin: 34px;
-  padding: 25px, 50px, 25px, 50px;
-  border-radius: 10px 10px 10px 0px;
-};
-
-.mentor_mentorings{
-  display: flex;
-  flex-direction: column;
-  // position: absolute;
-  left: 50%;
-  right: 50%;
-  height:353px;
-  width: 1397px;
-  margin: 0 auto;
-  // background-color: $secondary;
-  background-color: $gray3;
-  align-items: center;
-  justify-content: center;
-  li{
-    list-style: none;
-    font-size: 34px;
-    font-weight: bold;
+    left: 50%;
+    right: 50%;
+    height:353px;
+    width: 1397px;
+    margin: 0 auto;
+    // background-color: $secondary;
+    background-color: $gray3;
+    align-items: center;
+    justify-content: center;
+    li{
+      list-style: none;
+      font-size: 34px;
+      font-weight: bold;
+    }
   }
-};
-
-.blank{
-  height:150px;
-};
-.mentee_mentorings{
-  display: flex;
-  flex-direction: column;
-  // position: absolute;
-  left: 50%;
-  right: 50%;
-  height:353px;
-  width: 1397px;
-  margin: 0 auto;
-  background-color: $gray3;
-  align-items: center;
-  justify-content: center;
-  li{
-    list-style: none;
-    font-size: 34px;
-    font-weight: bold;
+  .blank{
+    height:150px;
   }
-};
+  .mentee_mentorings{
+    display: flex;
+    flex-direction: column;
+    // position: absolute;
+    left: 50%;
+    right: 50%;
+    height:353px;
+    width: 1397px;
+    margin: 0 auto;
+    background-color: $gray3;
+    align-items: center;
+    justify-content: center;
+    li{
+      list-style: none;
+      font-size: 34px;
+      font-weight: bold;
+    }
+  }
+}
