--- a/frontend/army_mentoring/src/components/Routes/Login/Profile.scss
+++ b/frontend/army_mentoring/src/components/Routes/Login/Profile.scss
@@ -3,101 +3,105 @@
 .profile{
   display:flex;
   flex-direction: column;
-  left: 50%;
-  right: 50%;
+  width:1500px;
+  height:1500px;
+  justify-content: space-between;
   margin: 0 auto;
   align-items: center;
-  justify-content: center;
   
   .intro{
     display:flex;
-    flex-direction: column;
-    left: 50%;
-    right: 50%;
-    height:416px;
-    width: 1350px;
+    flex-direction: row;
+    height:500px;
+    width: 1500px;
     margin: 0 auto;
     background-color: $secondary;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     border-radius: 0px 200px 200px 200px;
 
     .my-img{
-      display: flex;
-      flex-direction: column;
       border: 1px solid;
       border-radius: 15px;
-      width: 150px;
-      height: 150px;
+      width: 300px;
+      height: 300px;
     }
 
-    .go-portfolio{
-      font-size:30px;
-      color: white;
-      background-color: $gray2;
-      border-radius:10px 10px 10px 0;
+    .desc-col{
       display:flex;
-      align-items: center;
-      justify-content: center;
-      padding: 0px;
-      margin: 0px;
-      width: 334px;
-      height: 105px;
+      flex-direction: column;
+      justify-content: space-around;
+      text-align: left;
+      height:300px;
+      h1 {
+        color: $white;
+        font-weight: bold;
+        font-size: 50px;
+      }
+      span{
+        font-weight: bold;
+        font-size: 25px;
+      }
+    }
+
+    .button-col{
+
+      display:flex;
+      flex-direction: column;
+      height:250px;
+      justify-content: flex-end;
+
+      .go-portfolio{
+        font-size:30px;
+        color: white;
+        background-color: $gray2;
+        border-radius:10px 10px 10px 0;
+        padding: 0px;
+        margin: 0px;
+        width: 350px;
+        height: 100px;
+        line-height: 100px;
+        text-decoration: none;
+        color: $white;
+      }
+    }
+  }
+
+  .buttons{
+    display:flex;
+    width:100%;
+    height:70px;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    .button{
+      background-color: $secondary;
       text-decoration: none;
-      color: $white;
+      font-size:20px;
+      color: white;
+      display:block;
+      width: 300px;
+      height: 70px;
+      line-height: 70px;
+      padding:0px;
+      margin:0px;
+      border-radius: 10px 10px 10px 0px;
+      font-weight:bold;
     }
+
   }
 
-  .DM{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: $secondary;
-    text-decoration: none;
-    font-size:20px;
-    color: white;
-    width: 276px;
-    height: 78px;
-    margin: 34px;
-    padding: 25px, 50px, 25px, 50px;
-    border-radius: 10px 10px 10px 0px;
-  }
-
-  .mentor_mentorings{
+  .mentorings{
     display: flex;
     flex-direction: column;
-    // position: absolute;
-    left: 50%;
-    right: 50%;
-    height:353px;
-    width: 1397px;
-    margin: 0 auto;
-    // background-color: $secondary;
-    background-color: $gray3;
-    align-items: center;
-    justify-content: center;
-    li{
-      list-style: none;
-      font-size: 34px;
-      font-weight: bold;
-    }
-  }
-  .blank{
-    height:150px;
-  }
-  .mentee_mentorings{
-    display: flex;
-    flex-direction: column;
-    // position: absolute;
-    left: 50%;
-    right: 50%;
-    height:353px;
-    width: 1397px;
+    height:400px;
+    width: 1300px;
     margin: 0 auto;
     background-color: $gray3;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: space-around;
     li{
+      margin-left: 50px;
       list-style: none;
       font-size: 34px;
       font-weight: bold;
