[update] : edit profile change 함수 작성, footer 배경색변경

--- a/frontend/army_mentoring/src/components/Footer/Footer.scss
+++ b/frontend/army_mentoring/src/components/Footer/Footer.scss
@@ -1,6 +1,6 @@
-$gray3 :#D4D4D4;
+@import '../Routes/preset.scss';
 
 #footer{
     height:200px;
-    background-color:$gray3;
+    background-color:$primary;
 }
