--- a/frontend/army_mentoring/src/components/Routes/Mentoring/Mentorintroduction.scss
+++ b/frontend/army_mentoring/src/components/Routes/Mentoring/Mentorintroduction.scss
@@ -18,7 +18,7 @@ $gray3 : #D4D4D4;
   .OneLineIntro{
     font-size: 50px;
     color: white;
-    // margin-top: 200px;
+    margin-top: 50px;
     // margin-bottom: 117px;
     flex-direction: column;
   
@@ -55,18 +55,30 @@ $gray3 : #D4D4D4;
     width:100px;
   }
   
-  .mentor-pic{
+  .mentor-img{
     display: flex;
     flex-direction: column;
-    // align-items: center;
-    // padding: 0px 0px 0px 200px;
-    // padding-left: 200px;
-    border: 1px solid;
-    border-radius: 15px;
-    width: 150px;
-    height: 150px;
-  };
+
+    .mentor-pic{
+      // align-items: center;
+      // padding: 0px 0px 0px 200px;
+      // padding-left: 200px;
+      border: 1px solid;
+      border-radius: 15px;
+      width: 150px;
+      height: 150px;
+    };
+    
+    .username{
+      font-size: 25px;
+      color: white;
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: bold;
+    };
+  }
   
+
   .Summary{
     display: flex;
     float: left;
