--- a/frontend/army_mentoring/src/components/Routes/Community.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community.scss
@@ -1,14 +1,36 @@
-
-.community_board{
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    .community_post{
-        margin: 30px;
-        display: flex;
-        flex-direction: column;
-        border:solid ;
-        width: 800px;
-        border-color: black;
-    }
+.community_board {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	.community_post {
+		margin: 30px;
+		display: flex;
+		flex-direction: column;
+		border: solid;
+		width: 800px;
+		background-color: white;
+		border: 3px solid green;
+		text-decoration: none;
+		color: black;
+		border-radius: 20px 20px 20px 0px;
+		.community_title {
+			margin-left: 20px;
+			width: 50px;
+			align-items: flex-start;
+			font-weight: bold;
+		}
+		.community_statistics {
+			display: flex;
+			flex-direction: row;
+			width: 300px;
+			margin: 20px;
+			.community_comments {
+				border: 1px solid black;
+				margin-right: 5px;
+			}
+			.community_likes {
+				border: 1px solid black;
+			}
+		}
+	}
 }
