--- a/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioList.scss
@@ -57,6 +57,7 @@
             border-radius: 15px 15px 15px 0px;
             text-decoration: none;
             color:$white;
+            cursor : pointer;
         }
         .confirm{
             background-color: $primary;
