--- a/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioDetail.scss
+++ b/frontend/army_mentoring/src/components/Routes/Profile/Portfolio/PortfolioDetail.scss
@@ -66,6 +66,7 @@
             margin:10px;
             border:1px solid $black;
             border-radius: 15px 15px 15px 0px;
+            cursor:pointer;
         }
         .confirm{
             background-color: $primary;
