[update] : community API 코드 분리 및, button mixin 작성

--- a/frontend/army_mentoring/src/components/Routes/Community/Article.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/Article.scss
@@ -75,4 +75,18 @@
 			width:200px;
 		}
 	}
+	.buttons{
+		display:flex;
+		flex-direction: row;
+		justify-content: flex-end;
+		.button{
+			@include button
+		}
+		.remove{
+			background-color: $gray2;
+		}
+		.back{
+			background-color: $gray2;
+		}
+	}
 }
