--- a/frontend/army_mentoring/src/components/Routes/Community/EditArticle.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/EditArticle.scss
@@ -24,14 +24,7 @@
         flex-direction: row;
         justify-content: flex-end;
         .button{
-            display:block;
-            width:100px;
-            margin: 10px;
-            height:50px;
-            line-height:50px;
-            border: 1px solid $black;
-            border-radius: 15px 15px 15px 0px;
-            cursor: pointer;
+            @include button
         }
         .confirm{
             background-color: $primary;
