--- a/frontend/army_mentoring/src/components/Routes/preset.scss
+++ b/frontend/army_mentoring/src/components/Routes/preset.scss
@@ -10,3 +10,18 @@ $gray1 : #3F3F3F;
 $gray2 : #A3A3A3;
 $gray3 : #D4D4D4;
 $gray4 : #F0F0F0;
+
+@mixin button{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:100px;
+    height:50px;
+    line-height: 50px;
+    border:3px solid $black;
+    border-radius: 15px 15px 15px 0px;
+    margin:10px;
+    color:$white;
+    font-weight: bold;
+    cursor : pointer;
+}
