[update] : 좋아요 API 코드 작성, 스타일 수정

--- a/frontend/army_mentoring/src/components/Routes/Community/Article.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/Article.scss
@@ -21,19 +21,7 @@
 	.community_contents{
 		margin: 0px 20px;
 	}
-	.community_statistics {
-		display: flex;
-		flex-direction: row;
-		width: 300px;
-		margin: 20px;
-		.community_comments {
-			border: 1px solid black;
-			margin-right: 5px;
-		}
-		.community_likes {
-			border: 1px solid black;
-		}
-	}
+	@include statistics;
 	.comments{
 		.comment{
 			display:flex;
@@ -80,7 +68,7 @@
 		flex-direction: row;
 		justify-content: flex-end;
 		.button{
-			@include button
+			@include button;
 		}
 		.remove{
 			background-color: $gray2;
