--- a/frontend/army_mentoring/src/components/Routes/Community/ArticleList.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/ArticleList.scss
@@ -21,23 +21,6 @@
 		}
 	}
 	.community_post {
-		margin: 30px;
-		display: flex;
-		flex-direction: column;
-		border: solid;
-		width: 800px;
-		background-color: $white;
-		border: 3px solid $primary;
-		color: $black;
-		border-radius: 20px 20px 20px 0px;
-		text-decoration: none;
-		.community_title {
-			margin: 0px 0px 20px 20px;
-			display:flex;
-			flex-direction: row;
-			justify-content: flex-start;
-			font-weight: bold;
-		}
-		@include statistics;
+		@include communitiyPostTitleContentStatistics;
 	}
 }
