[update] : 게시글 댓글 수정 및 정렬, 좋아요 스타일

--- a/frontend/army_mentoring/src/components/Routes/Community/community.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/community.scss
@@ -12,6 +12,7 @@
     color:$white;
     font-weight: bold;
     cursor : pointer;
+    text-decoration: none;
 }
 @mixin communityPost{
     margin: 30px;
