--- a/frontend/army_mentoring/src/components/Routes/Community/Article.scss
+++ b/frontend/army_mentoring/src/components/Routes/Community/Article.scss
@@ -16,8 +16,13 @@
 		color:red;
 	}
 	.comments{
-		.comment{
+		.h{
+			display:none;
+		}
+		.s{
 			display:flex;
+		}
+		.comment{
 			flex-direction: row;
 			justify-content: space-around;
 			border: 1px solid $gray3;
@@ -69,6 +74,58 @@
 				}
 			}
 		}
+		.editcomment{
+			flex-direction: row;
+			justify-content: space-around;
+			border: 1px solid $gray3;
+			margin: 10px 0px;
+			border-radius: 15px 15px 15px 0px;
+			.head{
+				display:flex;
+				flex-direction: row;
+				justify-content: flex-start;
+				font-size: 15px;
+				margin-left : 10px;
+				.profile-image{
+					width:100px;
+					height:100px;
+					border:1px solid $gray2;
+					border-radius:50px;
+					margin:10px;
+				}
+			}
+			.content{
+				display:flex;
+				flex-direction: column;
+				justify-content: flex-start;
+				margin: 10px 0px;
+				width:80%;
+				.writer{
+					color:$gray1;
+					text-align: left;
+					font-weight: bold;
+				}
+				.edit-description{
+					color:$black;
+					height:80%;
+				}
+			}
+			.tail{
+				display:flex;
+				flex-direction: column;
+				justify-content: space-between;
+				align-items: center;
+				margin-right: 10px;
+				.like{
+					@include communityLikes;
+					width:80px;
+				}
+				.date{
+					font-size:10px;
+					color:$gray2;
+				}
+			}
+		}
 	}
 	.input-comment{
 		padding:10px;
@@ -98,6 +155,9 @@
 			background-color: $gray2;
 		}
 		.back{
+			background-color: $gray2;
+		}
+		.edit{
 			background-color: $gray2;
 		}
 	}
