[update]: css 폰트 추가 및 헤더 푸터 설정
css 폰트 추가 및 헤더 푸터 설정
gh-58

--- a/frontend/army_mentoring/src/components/Footer/Footer.scss
+++ b/frontend/army_mentoring/src/components/Footer/Footer.scss
@@ -1,6 +1,19 @@
 @import '../Routes/preset.scss';
 
-#footer{
+.footer{
     height:200px;
     background-color:$primary;
+}
+
+.copyright{
+    padding-top: 30px;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.contact{
+    font-family: 'Noto Sans KR', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
 }
