--- a/frontend/army_mentoring/src/components/Routes/preset.scss
+++ b/frontend/army_mentoring/src/components/Routes/preset.scss
@@ -10,3 +10,20 @@ $gray1 : #3F3F3F;
 $gray2 : #A3A3A3;
 $gray3 : #D4D4D4;
 $gray4 : #F0F0F0;
+
+/* 본문용 한글, 영어 폰트 (일반적인 폰트)
+Noto Sans KR : Open Font License
+font-family: 'Noto Sans KR', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap');
+/* 제목용 한글 폰트 (각지고 깔끔)
+Do Hyeon : Open Font License
+font-family: 'Do Hyeon', sans-serif; */
+@import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+/* 제목용 영어폰트 (굵고 곡선형)
+Righteous : Open Font License
+font-family: 'Righteous', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+/* 제목용 영어폰트 (굵고 동글동글)
+Fredoka One : Open Font License
+font-family: 'Fredoka One', cursive; */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
