[update]: 홈 화면 css 수정
홈 화면 css 수정
gh-58

--- a/frontend/army_mentoring/src/components/Header/Header.scss
+++ b/frontend/army_mentoring/src/components/Header/Header.scss
@@ -31,7 +31,7 @@ li{
   font-weight: 100;
   a{
     text-decoration: none;
-    color:$secondary;
+    color:$tertiary;
     &:hover{
         color:$gray3;
     }
